--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app">
+      <h3>Poké API</h3>
       <form>
         <input type="text" id="searchText">
         <button id="getBtn">Get</button>
