created interface + search

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
     <div id="app">
       <h3>Poké API</h3>
-      <form>
-        <input type="text" id="searchText">
+        <input type="text" id="pokemonSearch">
         <button id="getBtn">Get</button>
-      </form>
+        
+        <section id="pokemonContainer">
+
+        </section>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
